Initial investigation of the dataset for missing or problematic data (Points 1 & 2)

--- a/5.1_Coupon_Analysis.ipynb
+++ b/5.1_Coupon_Analysis.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "dzNoP3o__qRG"
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "X0vbffYg_qRH"
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "TXofQ_DF_qRH",
     "outputId": "2fc96a2c-1112-4b54-f24f-dbb9bc88abfb"
@@ -338,7 +338,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,12 +358,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {
+    "id": "6CwL6oWj_qRH",
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 12684 entries, 0 to 12683\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   destination           12684 non-null  object\n",
+      " 1   passanger             12684 non-null  object\n",
+      " 2   weather               12684 non-null  object\n",
+      " 3   temperature           12684 non-null  int64 \n",
+      " 4   time                  12684 non-null  object\n",
+      " 5   coupon                12684 non-null  object\n",
+      " 6   expiration            12684 non-null  object\n",
+      " 7   gender                12684 non-null  object\n",
+      " 8   age                   12684 non-null  object\n",
+      " 9   maritalStatus         12684 non-null  object\n",
+      " 10  has_children          12684 non-null  int64 \n",
+      " 11  education             12684 non-null  object\n",
+      " 12  occupation            12684 non-null  object\n",
+      " 13  income                12684 non-null  object\n",
+      " 14  car                   108 non-null    object\n",
+      " 15  Bar                   12577 non-null  object\n",
+      " 16  CoffeeHouse           12467 non-null  object\n",
+      " 17  CarryAway             12533 non-null  object\n",
+      " 18  RestaurantLessThan20  12554 non-null  object\n",
+      " 19  Restaurant20To50      12495 non-null  object\n",
+      " 20  toCoupon_GEQ5min      12684 non-null  int64 \n",
+      " 21  toCoupon_GEQ15min     12684 non-null  int64 \n",
+      " 22  toCoupon_GEQ25min     12684 non-null  int64 \n",
+      " 23  direction_same        12684 non-null  int64 \n",
+      " 24  direction_opp         12684 non-null  int64 \n",
+      " 25  Y                     12684 non-null  int64 \n",
+      "dtypes: int64(8), object(18)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Size of the data set along with a general sense of how much is missing\n",
+    "data.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Observations from data.info() above:\n",
+    "# Many columns have no missing data since their non-Null count = RangeIndex\n",
+    "# The 'car' column is mostly null so unlikely it can be used.\n",
+    "# Some missing data: Bar,CoffeeHouse,CarryAway,RestaurantLessThan20,Restaurant20To50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "id": "6CwL6oWj_qRH"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Column: destination\n",
+      "Number of distinct values (including NaN): 3\n",
+      "ALL values: ['No Urgent Place' 'Home' 'Work']\n",
+      "\n",
+      "Column: passanger\n",
+      "Number of distinct values (including NaN): 4\n",
+      "ALL values: ['Alone' 'Friend(s)' 'Kid(s)' 'Partner']\n",
+      "\n",
+      "Column: weather\n",
+      "Number of distinct values (including NaN): 3\n",
+      "ALL values: ['Sunny' 'Rainy' 'Snowy']\n",
+      "\n",
+      "Column: temperature\n",
+      "Number of distinct values (including NaN): 3\n",
+      "ALL values: [55 80 30]\n",
+      "\n",
+      "Column: time\n",
+      "Number of distinct values (including NaN): 5\n",
+      "ALL values: ['2PM' '10AM' '6PM' '7AM' '10PM']\n",
+      "\n",
+      "Column: coupon\n",
+      "Number of distinct values (including NaN): 5\n",
+      "ALL values: ['Restaurant(<20)' 'Coffee House' 'Carry out & Take away' 'Bar'\n",
+      " 'Restaurant(20-50)']\n",
+      "\n",
+      "Column: expiration\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: ['1d' '2h']\n",
+      "\n",
+      "Column: gender\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: ['Female' 'Male']\n",
+      "\n",
+      "Column: age\n",
+      "Number of distinct values (including NaN): 8\n",
+      "ALL values: ['21' '46' '26' '31' '41' '50plus' '36' 'below21']\n",
+      "\n",
+      "Column: maritalStatus\n",
+      "Number of distinct values (including NaN): 5\n",
+      "ALL values: ['Unmarried partner' 'Single' 'Married partner' 'Divorced' 'Widowed']\n",
+      "\n",
+      "Column: has_children\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: [1 0]\n",
+      "\n",
+      "Column: education\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: ['Some college - no degree' 'Bachelors degree' 'Associates degree'\n",
+      " 'High School Graduate' 'Graduate degree (Masters or Doctorate)'\n",
+      " 'Some High School']\n",
+      "\n",
+      "Column: occupation\n",
+      "Number of distinct values (including NaN): 25\n",
+      "10 sample values: ['Unemployed' 'Architecture & Engineering' 'Student'\n",
+      " 'Education&Training&Library' 'Healthcare Support'\n",
+      " 'Healthcare Practitioners & Technical' 'Sales & Related' 'Management'\n",
+      " 'Arts Design Entertainment Sports & Media' 'Computer & Mathematical']\n",
+      "\n",
+      "Column: income\n",
+      "Number of distinct values (including NaN): 9\n",
+      "ALL values: ['$37500 - $49999' '$62500 - $74999' '$12500 - $24999' '$75000 - $87499'\n",
+      " '$50000 - $62499' '$25000 - $37499' '$100000 or More' '$87500 - $99999'\n",
+      " 'Less than $12500']\n",
+      "\n",
+      "Column: car\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: [nan 'Scooter and motorcycle' 'crossover' 'Mazda5' 'do not drive'\n",
+      " 'Car that is too old to install Onstar :D']\n",
+      "\n",
+      "Column: Bar\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: ['never' 'less1' '1~3' 'gt8' nan '4~8']\n",
+      "\n",
+      "Column: CoffeeHouse\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: ['never' 'less1' '4~8' '1~3' 'gt8' nan]\n",
+      "\n",
+      "Column: CarryAway\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: [nan '4~8' '1~3' 'gt8' 'less1' 'never']\n",
+      "\n",
+      "Column: RestaurantLessThan20\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: ['4~8' '1~3' 'less1' 'gt8' nan 'never']\n",
+      "\n",
+      "Column: Restaurant20To50\n",
+      "Number of distinct values (including NaN): 6\n",
+      "ALL values: ['1~3' 'less1' 'never' 'gt8' '4~8' nan]\n",
+      "\n",
+      "Column: toCoupon_GEQ5min\n",
+      "Number of distinct values (including NaN): 1\n",
+      "ALL values: [1]\n",
+      "\n",
+      "Column: toCoupon_GEQ15min\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: [0 1]\n",
+      "\n",
+      "Column: toCoupon_GEQ25min\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: [0 1]\n",
+      "\n",
+      "Column: direction_same\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: [0 1]\n",
+      "\n",
+      "Column: direction_opp\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: [1 0]\n",
+      "\n",
+      "Column: Y\n",
+      "Number of distinct values (including NaN): 2\n",
+      "ALL values: [1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Let's see what unique values lie in each column to spot problematic data\n",
+    "\n",
+    "# Loop through every column\n",
+    "for col in data.columns:\n",
+    "    unique_vals = data[col].unique()\n",
+    "    n_unique = data[col].nunique(dropna=False)\n",
+    "\n",
+    "    # Print the column name and a total number of distinct/different values\n",
+    "    print(f\"\\nColumn: {col}\")\n",
+    "    print(f\"Number of distinct values (including NaN): {n_unique}\")\n",
+    "\n",
+    "    # If the number of unique values are more than 10 then print a sample of 10,\n",
+    "    # otherwise print all the values up to an including 10 of them\n",
+    "    if n_unique <= 10:\n",
+    "        print(\"ALL values:\", unique_vals)\n",
+    "    else:\n",
+    "        print(\"10 sample values:\", unique_vals[:10])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "id": "6CwL6oWj_qRH"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Column: Occupation\n",
+      "ALL values: ['Unemployed' 'Architecture & Engineering' 'Student'\n",
+      " 'Education&Training&Library' 'Healthcare Support'\n",
+      " 'Healthcare Practitioners & Technical' 'Sales & Related' 'Management'\n",
+      " 'Arts Design Entertainment Sports & Media' 'Computer & Mathematical'\n",
+      " 'Life Physical Social Science' 'Personal Care & Service'\n",
+      " 'Community & Social Services' 'Office & Administrative Support'\n",
+      " 'Construction & Extraction' 'Legal' 'Retired'\n",
+      " 'Installation Maintenance & Repair' 'Transportation & Material Moving'\n",
+      " 'Business & Financial' 'Protective Service'\n",
+      " 'Food Preparation & Serving Related' 'Production Occupations'\n",
+      " 'Building & Grounds Cleaning & Maintenance' 'Farming Fishing & Forestry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OBSERVATIONS:\n",
+    "#  Only occupation has more than 10 distinct values (ie 25).\n",
+    "#  so let's see what they all are so as to check for issues\n",
+    "\n",
+    "unique_occupation_vals = data[\"occupation\"].unique()\n",
+    "print(f\"\\nColumn: Occupation\")\n",
+    "print(\"ALL values:\", unique_occupation_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "id": "6CwL6oWj_qRH"
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "# CONCLUSION so far to missing and problematic data:\n",
+    "# A. Car column cannot be effectively used - too few values.\n",
+    "# B. Only occupation has more than 10 distinct values (ie 25).\n",
+    "# C. Every other column has less than 10 distinct values\n",
+    "# D. Looking at all the distinct values tells us that ...\n",
+    "#    - there's no mess like embeded footnote markers (eg. [23] from Wikipedia)    \n",
+    "#    - no others are problematic except the for the columns with NaN\n",
+    "#    that we noted before:\n",
+    "#     Bar,CoffeeHouse,CarryAway,RestaurantLessThan20,Restaurant20To50\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,7 +645,9 @@
     "id": "tyvoAC5F_qRI"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -671,9 +937,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (conda base)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -685,7 +951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
