Further investigation of the dataset for problematic data.

--- a/5.1_Coupon_Analysis.ipynb
+++ b/5.1_Coupon_Analysis.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {
     "id": "dzNoP3o__qRG"
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "id": "X0vbffYg_qRH"
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {
     "id": "TXofQ_DF_qRH",
     "outputId": "2fc96a2c-1112-4b54-f24f-dbb9bc88abfb"
@@ -338,7 +338,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {
     "id": "6CwL6oWj_qRH",
     "scrolled": true
@@ -405,13 +405,13 @@
     }
    ],
    "source": [
-    "# Size of the data set along with a general sense of how much is missing\n",
+    "# Examine the size of the data set along with a general sense of how much is missing\n",
     "data.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -426,7 +426,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
+   "metadata": {
+    "id": "6CwL6oWj_qRH"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Rows with at least one empty string: 0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Let's see if there are any rows with empty strings:\n",
+    "total_empty_rows = (data == '').any(axis=1).sum()\n",
+    "print()\n",
+    "print(\"Rows with at least one empty string:\", total_empty_rows)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -574,7 +600,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
+   "metadata": {
+    "id": "6CwL6oWj_qRH"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows that would be lost: 605\n",
+      "\n",
+      "Percentage of rows lost: 4.77%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Let's see how many rows would be lost if the rows with NaN values were removed.\n",
+    "# Not counting the 'car' column which has so few entries.\n",
+    "# Let's do a general code,\n",
+    "# though we can see from direct observation that the columns with issues are:\n",
+    "# 'Bar', 'CoffeeHouse', 'CarryAway', 'RestaurantLessThan20' and 'Restaurant20To50'\n",
+    "\n",
+    "cols = data.columns.difference(['car'])\n",
+    "rows_with_nan = data[data[cols].isnull().any(axis=1)]\n",
+    "print(\"Rows that would be lost:\", len(rows_with_nan))\n",
+    "\n",
+    "# What percentage of the total rows would be removed?\n",
+    "percent_lost = (len(rows_with_nan) / len(data)) * 100\n",
+    "print()\n",
+    "print(f\"Percentage of rows lost: {percent_lost:.2f}%\")\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -611,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -620,13 +683,18 @@
     "\n",
     "# CONCLUSION so far to missing and problematic data:\n",
     "# A. Car column cannot be effectively used - too few values.\n",
-    "# B. Only occupation has more than 10 distinct values (ie 25).\n",
-    "# C. Every other column has less than 10 distinct values\n",
-    "# D. Looking at all the distinct values tells us that ...\n",
+    "# B. There are no empty strings ('') in the data.\n",
+    "# C. Only occupation has more than 10 distinct values (ie 25).\n",
+    "# D. Every other column has less than 10 distinct values\n",
+    "# E. Looking at all the distinct values tells us that ...\n",
     "#    - there's no mess like embeded footnote markers (eg. [23] from Wikipedia)    \n",
     "#    - no others are problematic except the for the columns with NaN\n",
     "#    that we noted before:\n",
-    "#     Bar,CoffeeHouse,CarryAway,RestaurantLessThan20,Restaurant20To50\n"
+    "#     Bar,CoffeeHouse,CarryAway,RestaurantLessThan20,Restaurant20To50\n",
+    "# F. If we removed the 'car' column and then remove the rows with NaN\n",
+    "#    then we will only lose 4.77% of data which is quite minor\n",
+    "# G. Statistical outliers with wildly different values do not appear to\n",
+    "#    be an issue, because the range of values is not large in each column.\n"
    ]
   },
   {
@@ -646,6 +714,8 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "\n"
    ]
   },
