Problem data investigation and better explaining decisions.

--- a/5.1_Coupon_Analysis.ipynb
+++ b/5.1_Coupon_Analysis.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "id": "dzNoP3o__qRG"
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {
     "id": "X0vbffYg_qRH"
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {
     "id": "TXofQ_DF_qRH",
     "outputId": "2fc96a2c-1112-4b54-f24f-dbb9bc88abfb"
@@ -338,7 +338,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {
     "id": "6CwL6oWj_qRH",
     "scrolled": true
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -618,6 +618,18 @@
    ],
    "source": [
     "\n",
+    "# Examining the values for the columns with missing values:\n",
+    "#    'Bar', 'CoffeeHouse', 'CarryAway', 'RestaurantLessThan20' and 'Restaurant20To50'\n",
+    "# This reveals that there is a 'never' value so we can see that the missing values\n",
+    "# are not because the customer never visit those places. Nor it it that the customer\n",
+    "# visited them more than the max because there is a category for 'Greater than 8' (gt8).\n",
+    "# Therefore they appear to be customers not asnwering the question or a glitch\n",
+    "# in collecting the values. We can't effecively subsitute in a value.\n",
+    "# \n",
+    "# It is important to note what these columns are. Since they tell is how often people\n",
+    "# use the faclilites that the coupons are actually for, it seems like crucial data\n",
+    "# for finding a predictive model. The model will most likely need these columns.\n",
+    "#\n",
     "# Let's see how many rows would be lost if the rows with NaN values were removed.\n",
     "# Not counting the 'car' column which has so few entries.\n",
     "# Let's do a general code,\n",
@@ -637,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -674,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {
     "id": "6CwL6oWj_qRH"
    },
@@ -714,6 +726,8 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
