Clarified current conclusion of problematic data (Q1&2)

--- a/5.1_Coupon_Analysis.ipynb
+++ b/5.1_Coupon_Analysis.ipynb
@@ -702,10 +702,15 @@
     "#    - there's no mess like embeded footnote markers (eg. [23] from Wikipedia)    \n",
     "#    - no others are problematic except the for the columns with NaN\n",
     "#    that we noted before:\n",
-    "#     Bar,CoffeeHouse,CarryAway,RestaurantLessThan20,Restaurant20To50\n",
-    "# F. If we removed the 'car' column and then remove the rows with NaN\n",
-    "#    then we will only lose 4.77% of data which is quite minor\n",
-    "# G. Statistical outliers with wildly different values do not appear to\n",
+    "#     Bar, CoffeeHouse, CarryAway, RestaurantLessThan20 and Restaurant20To50\n",
+    "# F. Those columns will be important for seeing if a voucher helps customers\n",
+    "#    to go to one of these places again. We cannot do a suitable substitute\n",
+    "#    because seeing the other values shows the customer did not provide\n",
+    "#    an answer or the system failed to collect it. There is a value for \n",
+    "#    'never' and greater than 8 times ('gt8').\n",
+    "# G. Therefore if we removed the 'car' column and then remove the rows with NaN\n",
+    "#    then we will only lose 4.77% of data rows which is quite minor.\n",
+    "# H. Statistical outliers with wildly different values do not appear to\n",
     "#    be an issue, because the range of values is not large in each column.\n"
    ]
   },
@@ -727,7 +732,12 @@
    "outputs": [],
    "source": [
     "\n",
+    "# Remove from our data frame the 'car' column (but not from the .csv file)\n",
+    "data = data.drop(columns=['car'])\n",
     "\n",
+    "# Remove from our data frame rows with no data.\n",
+    "# this we have discovered is \n",
+    "data = data.dropna()\n",
     "\n",
     "\n",
     "\n"
